# fleet-safety-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/samples/sample_trip/: gps.csv  imu.csv  meta.json
scripts/: make_sample_trip.py
src/fleetsafety/: __init__.py  cli.py  config.py  gps.py  importer.py  ingest.py  report.py  schemas.py  scoring.py  speed.py
src/fleetsafety/events/: __init__.py  harsh_accel.py  harsh_braking.py  speeding.py
src/fleetsafety/platform/: __init__.py  api.py  charts.py  db.py  i18n.py  models.py  periods.py  store.py
src/fleetsafety/platform/templates/: base.html  driver.html  fleet.html  map.html  trip.html
src/fleetsafety/vision/: __init__.py  clips.py  detect.py  tailgating.py  track.py
tests/: conftest.py  test_events.py  test_gps.py  test_importer.py  test_ingest.py  test_platform.py  test_report.py  test_schemas.py  test_scoring.py  test_tailgating.py  test_vision_sync.py
